--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Notes</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="start_label">Что использовать?</string>
+    <string name="btn_room">Room</string>
+    <string name="hint_name">Название</string>
+    <string name="hint_text">Введите содержание заметки</string>
+    <string name="btn_add">Добавить</string>
+    <string name="btn_update">Обновить</string>
+    <string name="title">Замтки</string>
+    <string name="input_name">Необходимо ввести название</string>
 </resources>
